# evalkit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
evals/: exact_only.yaml  qa.yaml
examples/: basic_suite.yaml
src/evalkit/: __init__.py  cli.py  compare.py  executor.py  loader.py  models.py  report.py  reporter.py  runner.py  scorer.py  threshold.py
src/evalkit/metrics/: __init__.py  base.py  exact_match.py  llm_judge.py  rubric.py  semantic_sim.py  semantic_similarity.py
src/evalkit/providers/: __init__.py  anthropic.py  base.py  openai.py
src/evalkit/templates/: report.html
tests/: test_metrics.py  test_models.py  test_runner.py  test_scorer.py  test_threshold.py
